feat(AIAI-585): application scope circuit breaker
* feat: init commit for circuit breaker prototype

* chore: updated demo and clean code

* fix(AIAI-585): guardrail throws error when user message contains file content types

* chore(AIAI-585): reverted bug fix because it will be fixed in another branch

* fix: remove permission files since user can stop all agents without permission (by edit the variables.yaml directly)

* feat(AIAI-585): introduce internal guardrails

* fix: remove unused import libraries

* refactor(AIAI-585): add circuit breaker stopAll/resumeAll API, strict "true" check, drop inaccurate stop reason

* refactor(AIAI-585): rename circuit breaker variable to AI.CircuitBreaker.Enabled, simplify variable comments

* refactor(AIAI-585): remove leftover code

* doc(AIAI-585): added document

* fix(AIAI-585): updated comment and remove leftover class